...
    <string name="msg_oauth_success">authentication is success!</string>
    <string name="msg_oauth_failed">authentication is failed…</string>
    <string name="msg_media_failed_loading">failed to load media…</string>
    <string name="msg_media_failed_tweetNotFound">failed to load media: maybe the tweet was deleted…</string>

    <string name="action_totop">To Top</string>
    <string name="action_writeTweet">Write Tweet</string>
    <string name="action_sendTweet">Send Tweet</string>
    <string name="action_group_user">action for the user</string>
    <string name="action_follow">follow</string>
    <string name="action_unfollow">unfollow</string>
    <string name="action_block_retweet">block retweet</string>
    <string name="action_mute">mute</string>
    <string name="action_unmute">unmute</string>
    <string name="action_block">block</string>
    <string name="action_r4s">report for spam</string>
    <string name="action_unblock">unblock</string>
    <string name="action_unblock_retweet">unblock RT</string>
    <string name="action_resumeTweet">Resume Tweet</string>

    <string name="user_following">following</string>
    <string name="user_muting">muting</string>
    <string name="user_blocking">blocking</string>

    <string name="title_home">home</string>
    <string name="title_conv">conversation</string>
    <string name="title_detail">tweet</string>
    <string name="title_search">search</string>
    <string name="title_tweet">what\'s happening?</string>
...
